# ER-Save-Lib

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  generate-docs.yml  release.yml
er_save_lib/: all.html  enum.SaveApiError.html  enum.SaveType.html  index.html  sidebar-items.js  struct.Save.html  struct.SaveApi.html
er_save_lib/AIAttackParam/: index.html  sidebar-items.js  struct.AIAttackParam.html
er_save_lib/ActionButtonParam/: index.html  sidebar-items.js  struct.ActionButtonParam.html
er_save_lib/AiAnimTblParam/: index.html  sidebar-items.js  struct.AiAnimTblParam.html
er_save_lib/AiOddsParam/: index.html  sidebar-items.js  struct.AiOddsParam.html
er_save_lib/AiSoundParam/: index.html  sidebar-items.js  struct.AiSoundParam.html
er_save_lib/AiStandardInfo/: index.html  sidebar-items.js  struct.AiStandardInfo.html
er_save_lib/AssetGeometryParam/: index.html  sidebar-items.js  struct.AssetGeometryParam.html
er_save_lib/AssetMaterialSfxParam/: index.html  sidebar-items.js  struct.AssetMaterialSfxParam.html
er_save_lib/AssetModelSfxParam/: index.html  sidebar-items.js  struct.AssetModelSfxParam.html
er_save_lib/AtkParam/: index.html  sidebar-items.js  struct.AtkParam.html
er_save_lib/AttackElementCorrectParam/: index.html  sidebar-items.js  struct.AttackElementCorrectParam.html
er_save_lib/AutoCreateEnvSoundParam/: index.html  sidebar-items.js  struct.AutoCreateEnvSoundParam.html
er_save_lib/BaseChrSelectMenuParam/: index.html  (+2 more)
src/: lib.rs
(+2363 files in other folders)
