[package]
name = "er-save-lib"
version = "0.1.0"
authors = ["ClayAmore <ClayAmore@github.com>"]
edition = "2021"
description = "A library for reading and writing Elden Ring save files, compatible with PC and Playstation Save Wizard exported saves."
license = "MIT OR Apache-2.0"

[dependencies]
deku = "0.17.0"
md5 = "0.7.0"
thiserror = "1.0.62"
encoding_rs = "0.8.34"
zstd = "0.13.2"
aes = "0.8.4"
cbc = "0.1.2"
